syntax = "proto3";

option go_package = "./proto/category";

package protoCategory;

message GetCategoryRequest {
    int64   ID = 1;
}

message GetCategoryResponse {
    int64   ID = 1;
    string  CategoryName = 2;
    bool    Status = 3;
}

service CategoryService {
    rpc GetCategory(GetCategoryRequest) returns (GetCategoryResponse){}
}